<resources>
    <string name="app_name">Hymn Book</string>
    <string name="sample_hymn">

1. Guide me, O Eternal Light,
Through the darkness of the night.
Shine upon my weary way,
Lead me to the break of day.\n\n
1. Guide me, O Eternal Light,
Through the darkness of the night.
Shine upon my weary way,
Lead me to the break of day.
</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="title_activity_song">Song</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="change_view">Change View</string>
    <string name="title_activity_all_songs">AllSongs</string>
    <string name="like">Like</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_font_list_titles">
        <item>Default</item>
        <item>Arvo-Bold</item>
        <item>Arvo-Italic</item>
        <item>Arvo-Regular</item>
        <item>AbrilFatface-Regular</item>
        <item>Amble-Regular-webfont</item>
        <item>BalooTammudu2-Regular</item>
        <item>BodoniFLF-Roman</item>
        <item>BreeSerif-Regular</item>
        <item>Courgette-Regular</item>
        <item>Cousine-Italic</item>
        <item>Cousine-Regular</item>
        <item>DejaVuSans</item>
        <item>DejaVuSans-ExtraLight</item>
        <item>DejaVuSansMono</item>
        <item>DroidSans</item>
        <item>graduate-regular-webfont</item>
        <item>JosefinSlab-Bold</item>
        <item>JosefinSlab-Regular</item>
        <item>Lato-Light</item>
        <item>Lato-Regular</item>
        <item>OldStandard-Regular</item>
        <item>OldStandard-Bold</item>
        <item>OpenSans-Italic-webfont</item>
        <item>opensans</item>
        <item>Sanchez-Regular</item>
        <item>slabo</item>
        <item>Oswald-Regular-webfont</item>
        <item>DroidSans-Bold</item>
        <item>Domine-Bold</item>
        <item>Domine-Regular</item>
        <item>EBGaramond-Regular</item>
        <item>FrankRuhlLibre-Regular</item>
        <item>GreatVibes-Regular</item>
        <item>IBMPlexSerif-Regular</item>
        <item>Jaldi-Bold</item>
        <item>Jaldi-Regular</item>
        <item>JosefinSlab-Italic</item>
        <item>JosefinSlab-Light</item>
        <item>JosefinSlab-Bold</item>
        <item>KumbhSans-Bold</item>
        <item>KumbhSans-Light</item>
        <item>KumbhSans-Regular</item>
        <item>Lato-Bold</item>
        <item>Lato-Italic</item>
        <item>Lato-Light</item>
        <item>Lato-Regular</item>
        <item>Lobster-Regular</item>
        <item>LobsterTwo-Bold</item>
        <item>LobsterTwo-Italic</item>
        <item>LobsterTwo-Regular</item>
        <item>MPLUSRounded1c-Bold</item>
        <item>MPLUSRounded1c-Light</item>
        <item>MPLUSRounded1c-Regular</item>
        <item>PassionOne-Bold</item>
        <item>PassionOne-Regular</item>
        <item>Prata-Regular</item>
        <item>Quicksand-Bold</item>
        <item>Quicksand-Regular</item>
        <item>Raleway-Bold</item>
        <item>Raleway-Italic</item>
        <item>Raleway-Regular</item>
        <item>RopaSans-Italic</item>
        <item>RopaSans-Regular</item>
        <item>Sanchez-Italic</item>
        <item>Satisfy-Regular</item>
        <item>Spartan-Bold</item>
        <item>Spartan-Regular</item>
        <item>ZillaSlab-Italic</item>
        <item>ZillaSlab-Regular</item>
        <item>ZillaSlab-Bold</item>
    </string-array>
    <string-array name="pref_font_list_values">
        <item>Default.ttf</item>
        <item>Arvo-Bold.ttf</item>
        <item>Arvo-Italic.ttf</item>
        <item>Arvo-Regular.ttf</item>
        <item>AbrilFatface-Regular.ttf</item>
        <item>Amble-Regular-webfont.ttf</item>
        <item>BalooTammudu2-Regular.ttf</item>
        <item>BodoniFLF-Roman.ttf</item>
        <item>BreeSerif-Regular.ttf</item>
        <item>Courgette-Regular.ttf</item>
        <item>Cousine-Italic.ttf</item>
        <item>Cousine-Regular.ttf</item>
        <item>DejaVuSans.ttf</item>
        <item>DejaVuSans-ExtraLight.ttf</item>
        <item>DejaVuSansMono.ttf</item>
        <item>DroidSans.ttf</item>
        <item>graduate-regular-webfont.ttf</item>
        <item>JosefinSlab-Bold.ttf</item>
        <item>JosefinSlab-Regular.ttf</item>
        <item>Lato-Light.ttf</item>
        <item>Lato-Regular.ttf</item>
        <item>OldStandard-Regular.ttf</item>
        <item>OldStandard-Bold.ttf</item>
        <item>OpenSans-Italic-webfont.ttf</item>
        <item>opensans.ttf</item>
        <item>Sanchez-Regular.ttf</item>
        <item>slabo.ttf</item>
        <item>Oswald-Regular-webfont.ttf</item>
        <item>DroidSans-Bold.ttf</item>
        <item>Domine-Bold.ttf</item>
        <item>Domine-Regular.ttf</item>
        <item>EBGaramond-Regular.ttf</item>
        <item>FrankRuhlLibre-Regular.ttf</item>
        <item>GreatVibes-Regular.ttf</item>
        <item>IBMPlexSerif-Regular.ttf</item>
        <item>Jaldi-Bold.ttf</item>
        <item>Jaldi-Regular.ttf</item>
        <item>JosefinSlab-Italic.ttf</item>
        <item>JosefinSlab-Light.ttf</item>
        <item>JosefinSlab-Bold.ttf</item>
        <item>KumbhSans-Bold.ttf</item>
        <item>KumbhSans-Light.ttf</item>
        <item>KumbhSans-Regular.ttf</item>
        <item>Lato-Bold.ttf</item>
        <item>Lato-Italic.ttf</item>
        <item>Lato-Light.ttf</item>
        <item>Lato-Regular.ttf</item>
        <item>Lobster-Regular.ttf</item>
        <item>LobsterTwo-Bold.ttf</item>
        <item>LobsterTwo-Italic.ttf</item>
        <item>LobsterTwo-Regular.ttf</item>
        <item>MPLUSRounded1c-Bold.ttf</item>
        <item>MPLUSRounded1c-Light.ttf</item>
        <item>MPLUSRounded1c-Regular.ttf</item>
        <item>PassionOne-Bold.ttf</item>
        <item>PassionOne-Regular.ttf</item>
        <item>Prata-Regular.ttf</item>
        <item>Quicksand-Bold.ttf</item>
        <item>Quicksand-Regular.ttf</item>
        <item>Raleway-Bold.ttf</item>
        <item>Raleway-Italic.ttf</item>
        <item>Raleway-Regular.ttf</item>
        <item>RopaSans-Italic.ttf</item>
        <item>RopaSans-Regular.ttf</item>
        <item>Sanchez-Italic.ttf</item>
        <item>Satisfy-Regular.ttf</item>
        <item>Spartan-Bold.ttf</item>
        <item>Spartan-Regular.ttf</item>
        <item>ZillaSlab-Italic.ttf</item>
        <item>ZillaSlab-Regular.ttf</item>
        <item>ZillaSlab-Bold.ttf</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="fonts">Change font</string>
    <string name="pref_units_key">font_key</string>
    <string name="change_font">Select font</string>
    <string name="default_font">Default</string>
    <string name="zoom_in">Zoom In</string>
    <string name="change_theme">Select theme</string>
    <string name="theme_desc">Use Dark or Light theme</string>
    <string name="font_desc">Change the text font</string>
    <string name="summary">Update hymns in your database</string>
    <string name="sync">Sync data</string>
    <string name="build_version">Version 2.0.0</string>
    <string name="lock_desc">Locks the app</string>
    <string name="lock_app">Set lock</string>
    <string name="password">Password</string>
    <string name="original_songs">Original</string>
    <string name="category">Category</string>
    <string name="favorite">Favorite</string>
    <string name="home_songs">Home</string>
    <string name="title_activity_main_bottom">MainActivityBottom</string>
    <string name="title_original">Original</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Favourites</string>
    <string name="title_notifications">Notifications</string>
    <string name="recent">Recently Viewed</string>
    <string name="hymn_verse">Hymn 3 . 6 Verses</string>
    <string name="sample_hymn_short">Let us with a gladsome voice</string>
    <string name="enter_text">Type a Number, Word or Lyrics</string>
    <string name="hymn_sample_number">Hymn 23 . Great is thy faithfulness</string>
    <string name="open_now">Open Now</string>
    <string name="hymn_day">Hymn of the Day</string>
    <string name="show">Show</string>
    <string name="hide">Hide</string>
</resources>
