<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="false"
        android:key="app_theme"
        android:summary="@string/theme_desc"
        android:title="@string/change_theme" />

    <SwitchPreference
        android:defaultValue="false"
        android:key="lock"
        android:summary="@string/lock_desc"
        android:title="@string/lock_app" />

    <ListPreference
        android:defaultValue="08:00"
        android:entries="@array/pref_notification_time_titles"
        android:entryValues="@array/pref_notification_time_values"
        android:key="notification_time"
        android:title="@string/pref_title_notification_time" />

    <Preference
        android:key="build_pref"
        android:summary="@string/build_version"
        android:title="Build version" >
    </Preference>

</PreferenceScreen>
