<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/original_songs"
            android:icon="@drawable/ic_shuffle_black_36dp"
            android:title="@string/original_songs" />
        <item
            android:id="@+id/home_songs"
            android:icon="@drawable/ic_shuffle_black_36dp"
            android:title="@string/home_songs" />
        <item
            android:id="@+id/category"
            android:icon="@drawable/ic_tab_unselected_black_36dp"
            android:title="@string/category" />
        <item
            android:id="@+id/favorite"
            android:icon="@drawable/ic_star_black_36dp"
            android:title="@string/favorite" />
    </group>

    <item android:title="Configuration">
        <menu>
            <item
                android:id="@+id/settings"
                android:icon="@drawable/ic_settings_black_36dp"
                android:title="@string/action_settings" />
        </menu>
    </item>
</menu>
