<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.HomeFragment">


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/margin_large"
        app:layout_constraintStart_toStartOf="parent" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintGuide_end="@dimen/margin_large" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/collapsible_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/hymn_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginStart="@dimen/margin_large"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/hymn_day"
            android:textAppearance="@style/TextAppearance.Material3.HeadlineSmall"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_large"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="@id/hymn_day"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/hymn_day" />

        <TextView
            android:id="@+id/hymn_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:layout_marginBottom="@dimen/margin_16"
            android:layout_marginStart="@dimen/margin_large"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/hymn_sample_number"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/hymn_day" />

        <TextView
            android:id="@+id/open_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            android:layout_marginStart="@dimen/margin_large"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/open_now"
            android:textColor="@color/blue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/hymn_title" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16"
            android:layout_marginTop="@dimen/margin_16"
            android:layout_marginEnd="@dimen/margin_16"
            app:endIconDrawable="@drawable/ic_search"
            app:endIconMode="custom"
            app:hintEnabled="false"
            app:layout_constraintTop_toBottomOf="@+id/open_now">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/searchfield"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input_text_background"
                android:hint="@string/enter_text"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:textCursorDrawable="@null"
                android:textColor="@android:color/black" />

        </com.google.android.material.textfield.TextInputLayout>

        <View
            android:id="@+id/recently_view"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="@dimen/margin_16"
            app:layout_constraintTop_toBottomOf="@id/search_layout" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
        android:id="@+id/recently_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:visibility="gone"
        android:text="@string/recent"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toBottomOf="@id/collapsible_header" />


    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recent_recycler"
        android:layout_width="0dp"
        android:visibility="gone"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_8"
        android:clipToPadding="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recently_header" />

    <View
        android:id="@+id/hymns_view"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recent_recycler" />

    <TextView
        android:id="@+id/hymns_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/home_songs"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@android:color/black"
        app:layout_constraintBottom_toBottomOf="@+id/hymns_view"
        app:layout_constraintStart_toStartOf="@id/guideline_start"
        app:layout_constraintTop_toTopOf="@+id/hymns_view" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/hymns_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_8"
        android:clipToPadding="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/constraint_parent"
        app:layout_constraintStart_toStartOf="@id/constraint_parent"
        app:layout_constraintTop_toBottomOf="@+id/hymns_header" />

</androidx.constraintlayout.widget.ConstraintLayout>